everything messed up, but I fixed it. Uses .env file for secret stuff, swarm and ansible tomorrow and then testing friday

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -3,16 +3,16 @@ http {
 	server {
 		listen 80;
 		location /home {
-			proxy_pass http://server:5000;
+			proxy_pass http://1_server:5000;
 		}
 		location /service2 {
-			proxy_pass http://stance_generator:5001;
+			proxy_pass http://2_stance:5001;
 		}
 		location /service3 {
-			proxy_pass http://trick_generator:5002;
+			proxy_pass http://3_trick:5002;
 		}
-		loaction /service4 {
-			proxy_pass http://SKATE:5003;
+		location /service4 {
+			proxy_pass http://4_SKATE:5003;
 		}
 	}
 }
