--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,10 +1,10 @@
 version: '3.3'
 services:
         1_server:
-                image: jamesjeffrey/1_server
+                image: jamesljeffrey1995/1_server
                 build: ./1_server
                 environment: 
-                          MY_SECRET_KEY: ${MY_SECRET_KEY}
+                          MY_SECRET_KEY: sfsdfsdfsdfsd
                 ports:
                         - '5000:5000'
                 depends_on:
@@ -13,18 +13,23 @@ services:
                         - 4_SKATE
 
         2_stance:
-                image: jamesjeffrey/2_stance
+                image: jamesljeffrey1995/2_stance
                 build: ./2_stance
                 ports:
                         - '5001:5001'
 
         3_trick: 
-                image: jamesjeffrey/3_trick
+                image: jamesljeffrey1995/3_trick
                 build: ./3_trick
                 ports: 
                         - '5002:5002'
+                environment:
+                        USERNAME: ${USERNAME}
+                        PASSWORD: ${PASSWORD}
+                        IP: ${IP}
+                        DATABASE: ${DATABASE}
         4_SKATE:
-                image: jamesjeffrey/4_skate
+                image: jamesljeffrey1995/4_skate
                 build: ./4_SKATE
                 ports:
                         - '5003:5003'
