--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,12 @@ services:
         1_server:
                 image: jamesljeffrey1995/1_server
                 build: ./1_server
-                enviroment:
-                        USERNAME=${USERNAME}
-                        PASSWORD=${PASSWORD}
-                        IP=${IP}
-                        DATABASE=${DATABASE}
-                        MY_SECRET_KEY=${MY_SECRET_KEY}
+                environment:
+                        - USERNAME=${USERNAME}
+                        - PASSWORD=${PASSWORD}
+                        - IP=${IP}
+                        - DATABASE=${DATABASE}
+                        - MY_SECRET_KEY=${MY_SECRET_KEY}
                 ports:
                         - '5000:5000'
                 depends_on:
@@ -23,12 +23,12 @@ services:
                 build: ./2_stance
                 ports:
                         - '5001:5001'
-                enviroment:
-                        USERNAME=${USERNAME}
-                        PASSWORD=${PASSWORD}
-                        IP=${IP}
-                        DATABASE=${DATABASE}
-                        MY_SECRET_KEY=${MY_SECRET_KEY}
+                environment:
+                        - USERNAME=${USERNAME}
+                        - PASSWORD=${PASSWORD}
+                        - IP=${IP}
+                        - DATABASE=${DATABASE}
+                        - MY_SECRET_KEY=${MY_SECRET_KEY}
 
                 deploy:
                         replicas: 3
@@ -38,12 +38,12 @@ services:
                 build: ./3_trick
                 ports: 
                         - '5002:5002'
-                enviroment:
-                        USERNAME=${USERNAME}
-                        PASSWORD=${PASSWORD}
-                        IP=${IP}
-                        DATABASE=${DATABASE}
-                        MY_SECRET_KEY=${MY_SECRET_KEY}
+                environment:
+                        - USERNAME=${USERNAME}
+                        - PASSWORD=${PASSWORD}
+                        - IP=${IP}
+                        - DATABASE=${DATABASE}
+                        - MY_SECRET_KEY=${MY_SECRET_KEY}
                 deploy:
                         replicas: 3
         4_SKATE:
@@ -51,12 +51,12 @@ services:
                 build: ./4_SKATE
                 ports:
                         - '5003:5003'
-                enviroment:
-                        USERNAME=${USERNAME}
-                        PASSWORD=${PASSWORD}
-                        IP=${IP}
-                        DATABASE=${DATABASE}
-                        MY_SECRET_KEY=${MY_SECRET_KEY}
+                environment:
+                        - USERNAME=${USERNAME}
+                        - PASSWORD=${PASSWORD}
+                        - IP=${IP}
+                        - DATABASE=${DATABASE}
+                        - MY_SECRET_KEY=${MY_SECRET_KEY}
                 deploy:
                         replicas: 3
         nginx:
