--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,6 +6,7 @@ pipeline{
                         sh "bash deploy-ansible.sh"
                 }
             }
+		stage('Set enviroment vars')
                 stage('Deploy application'){
                         steps{
                                 sh "bash docker-build.sh"
