--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,12 +3,7 @@ services:
         1_server:
                 image: jamesljeffrey1995/1_server
                 build: ./1_server
-                environment:
-                        - USERNAME=${USERNAME}
-                        - PASSWORD=${PASSWORD}
-                        - IP=${IP}
-                        - DATABASE=${DATABASE}
-                        - MY_SECRET_KEY=${MY_SECRET_KEY}
+                env_file: .env
                 ports:
                         - '5000:5000'
                 depends_on:
@@ -23,13 +18,7 @@ services:
                 build: ./2_stance
                 ports:
                         - '5001:5001'
-                environment:
-                        - USERNAME=${USERNAME}
-                        - PASSWORD=${PASSWORD}
-                        - IP=${IP}
-                        - DATABASE=${DATABASE}
-                        - MY_SECRET_KEY=${MY_SECRET_KEY}
-
+                env_file: .env
                 deploy:
                         replicas: 3
 
@@ -38,12 +27,7 @@ services:
                 build: ./3_trick
                 ports: 
                         - '5002:5002'
-                environment:
-                        - USERNAME=${USERNAME}
-                        - PASSWORD=${PASSWORD}
-                        - IP=${IP}
-                        - DATABASE=${DATABASE}
-                        - MY_SECRET_KEY=${MY_SECRET_KEY}
+                env_file: .env
                 deploy:
                         replicas: 3
         4_SKATE:
@@ -51,12 +35,7 @@ services:
                 build: ./4_SKATE
                 ports:
                         - '5003:5003'
-                environment:
-                        - USERNAME=${USERNAME}
-                        - PASSWORD=${PASSWORD}
-                        - IP=${IP}
-                        - DATABASE=${DATABASE}
-                        - MY_SECRET_KEY=${MY_SECRET_KEY}
+                env_file: .env
                 deploy:
                         replicas: 3
         nginx:
