--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,6 +1,11 @@
 pipeline{
         agent any
         stages{
+	    stage ('Test application'){
+		steps{
+			sh "bash tests.sh"
+		} 
+	}
             stage('Install Docker using ansible'){
                 steps{
                         sh "bash deploy-ansible.sh"
