--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,18 +1,13 @@
 events{}
 http {
-	server {
-		listen 80;
-		location /home {
-			proxy_pass http://1_server:5000;
-		}
-		location /service2 {
-			proxy_pass http://2_stance:5001;
-		}
-		location /service3 {
-			proxy_pass http://3_trick:5002;
-		}
-		location /service4 {
-			proxy_pass http://4_SKATE:5003;
-		}
-	}
+    upstream corePractical_1_server {
+        server 34.89.105.238:5000;
+        server 34.105.245.51:5000;
+        server 34.105.251.135:5000;
+    }
+    server {
+        location / {
+            proxy_pass http://corePractical_1_server;
+        }
+    }
 }
